objects/Department__c/Department__c.object-meta.xml
<CustomObject>
    <description>It is used to store the department for an employee.</description>
    <label>Department</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>