objects/Department__c/fields/Admin_R_Dept__c.field-meta.xml
<CustomField>
    <fullName>Admin_R_Dept__c</fullName>
    <description>The department (DEPTNO) to which this department reports; the department at the highest level reports to itself.</description>
    <inlineHelpText>The department (DEPTNO) to which this department reports; the department at the highest level reports to itself.</inlineHelpText>
    <label>Admin R Dept</label>
    <length>80</length>
    <type>Text</type>
</CustomField>