objects/Department__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Location of the department.</description>
    <inlineHelpText>Location of the department.</inlineHelpText>
    <label>Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>