objects/Department__c/fields/Manager_No__c.field-meta.xml
<CustomField>
    <fullName>Manager_No__c</fullName>
    <description>Employee number (EMPNO) of the department manager.</description>
    <inlineHelpText>Employee number (EMPNO) of the department manager.</inlineHelpText>
    <label>Manager No</label>
    <length>80</length>
    <type>Text</type>
</CustomField>